--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@angular/animations": "~11.0.4",
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
-    "@angular/core": "~11.0.4",
+    "@angular/core": "^11.2.7",
     "@angular/forms": "~11.0.4",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@ngx-pwa/local-storage": "^11.1.0",
+    "bulma": "^0.9.2",
+    "nanoid": "^3.1.22",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript-json-serializer": "^3.2.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
